--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rinputs",
+  "name": "ripass",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@hookform/resolvers": "^2.8.8",
+    "@mdx-js/loader": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
