--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       "dom.iterable",
       "esnext"
     ],
+    "outDir": "dist",
+    "declaration": true,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,7 +20,6 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "jsx": "react-jsx"
   },
   "include": [
