--- a/package.json
+++ b/package.json
@@ -4,8 +4,24 @@
   "private": false,
   "license": "MIT",
   "typings": "dist/index.d.ts",
+  "description": "Render a input if type password",
+  "keywords": [
+    "react",
+    "front-end",
+    "forms",
+    "inputs",
+    "password"
+  ],
+  "author": {
+    "name": "Jose Luis Perez Olguin",
+    "email": "gskitcat@gmail.com",
+    "url": "https://silly-ritchie-eec7bf.netlify.app/"
+  },
+  "funding": {
+    "type": "paypal",
+    "url": "https://paypal.me/jzhavo?country.x=MX&locale.x=es_XC"
+  },
   "main": "dist/index.js",
-  "homepage": "https://silly-ritchie-eec7bf.netlify.app",
   "repository": {
     "url": "https://github.com/programador51/reactjsform",
     "type": "git"
@@ -42,7 +58,8 @@
   },
   "scripts": {
     "start": "start-storybook -p 6006 -s public",
-    "build": "npm run clean && tsc && npm run copy-files",
+    "docsb": "build-storybook -s public",
+    "build": "npm run clean && tsc && npm run copy-files && npm run docsb",
     "clean": "rimraf dist/",
     "copy-files": "copyfiles -u 1 src/**/*.css dist/"
   },
