--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "scripts": {
     "start": "start-storybook -p 6006 -s public",
     "docsb": "build-storybook -s public -- -o ./docs",
-    "build": "npm run clean && tsc && npm run copy-files && npm run docsb",
+    "build": "npm run clean && tsc && npm run copy-files",
     "clean": "rimraf dist/",
     "copy-files": "copyfiles -u 1 src/**/*.css dist/"
   },
